removed collect method under removeDestroyedActors in LevelParent